src/objects/CloudingoAgent__CldExtCfg__c.object
<CustomObject>
    <description>This custom object holds Cloudingo Extended Configurations for the Agent.</description>
    <fields>
        <fullName>CloudingoAgent__FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__FieldType__c</fullName>
        <label>FieldType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__FieldValue__c</fullName>
        <label>FieldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__Operator__c</fullName>
        <label>Operator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__Usage__c</fullName>
        <label>Usage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CldExtCfg</label>
    <nameField>
        <label>CldExtCfg Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CldExtCfgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>